--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,3 +95,11 @@ textarea.editable-textarea:hover{
   font-size: 0.9rem;
 }
 
+.task-description-flag{
+  text-decoration: line-through;
+}
+
+.list-group-item:hover .task-description-flag{
+  text-decoration: none;
+}
+
